--- a/front/.env
+++ b/front/.env
@@ -1,5 +1,8 @@
 VITE_API=http://localhost:3027
 VITE_API_BACKEND=http://localhost:3027/API/v1
 VITE_PRODUCTS_ENDPOINT=/products
+
+VITE_IMAGES_BASE_URL=http://localhost:3027
+
 # VITE_MONGO_ENDPOINT=/API/v1/mongo/furniture
 # VITE_ENDPOINT_HEADER_IMAGE=/nav
