--- a/front/.env
+++ b/front/.env
@@ -1,5 +1,7 @@
 VITE_API=http://localhost:3027
 VITE_API_BACKEND=http://localhost:3027/API/v1
+
+VITE_ACCOUNTS_ENDPOINT=/users
 VITE_PRODUCTS_ENDPOINT=/products
 
 VITE_IMAGES_BASE_URL=http://localhost:3027
